style.css
html, body {
  overflow-x: hidden;
  box-sizing: border-box;
  margin: 0;
  display: flex;
  flex-direction: column;
} 

ul {
  list-style-type: none;
  display: table;
  margin: 0 auto;
}

span:hover {
  color: #FA8072;
  cursor: pointer;
}

.first-page { 
  background: url(images/bgimage.jpg) no-repeat center center; /* image credit to Bench Accounting on Unsplash */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.first-page img {
  position: fixed;
}

.first-page, .fourth-page {
  height: 100vh;
}

.second-page, .third-page, .fourth-page {
	background: white;
}

.main-title {
	font-family: 'Montserrat', sans-serif;
	text-align: center;
	color: #FA8072;
}

.page-title {
  font-family: 'Montserrat', sans-serif;
  text-align: center;
}

.sub-title, .text, .page-text {;
	font-family: 'Open Sans', sans-serif;
	text-align: center;
}

a {
	text-decoration: none;
	color: black;
}

a:visited {
	text-decoration: none;
	color: black;
}

.main-title {
	font-size: 10vh;
	margin: 2%;
}

.sub-title {
	text-align: center;
}

.central-content {
	letter-spacing: 3px;
	left: 0;
  margin-top: -10%;
  position: absolute;
  top: 50%;
  width: 100%;
}

.long-line {
  margin: 0 20% 0 20%;
  height: 7px;
  background: linear-gradient(to right,#FA8072, #F7CCAD);
  border: 0;
}

.menu-container {
  width: 100%;
  height: 3%;
  margin: 0;
  padding: 3%;
  background-color: white;
  position: fixed;
  z-index: 10;
}

.menu {
	float: right;
	top: 0;
	right: 0;
	margin: 3%;
	position: fixed;
}

.menu-link {
	font-family: 'Open Sans', sans-serif;
	text-decoration: none;
	background-color: #ffbfa8;
	padding: 8px;
	margin: 10px;
	color: black;
    background-size: 0% 100%;
    border:none;
    transition: background-color .5s;
}
		
.menu-link:hover {
	background-color:#FA8072;
	border: 2px solid #FA8072;
	background-image:linear-gradient(to right, #FA8072 0%, #F7CCAD 100%);
	background-repeat:no-repeat;
	background-size: 200% 100%; 
	transition:background-size 1s, background-color 1s;
}
		
.menu-link:active {
	background-color:#FA8072; 
	transition:background-size 0;
}

.page-title {
	font-size: 6vh;
	padding-top: 5%;
}

.line {
	margin: 0 15% 0 15%;
	height: 4px;
	background: linear-gradient(to right,#FA8072, #F7CCAD);
	border: 0;
}

.page-text {
	text-align: justify;
	text-justify: inter-word;
	font-size: 2.5vh;
	margin: 5% 15% 6% 15%;
}

.second-page .page-text {
  font-weight: 300;
}

.icons .page-text {
  text-align: center;
  margin: 10% 15% 0 15%;
}

.projects {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 7%;
  align-items: stretch;
  margin: 15% 15% 10% 15%;
}

.project-image {
	width: 100%;
  //opacity: 0.6;
}

/*.project-image:hover {
  opacity: 1;
}
*/

.project-description {
  text-justify: inter-word;
  text-align: center;
  display: none;
}

.card {
  display: none;
}

.show {
  text-align: center;
  transition: 0.3s;
  display: block;
}

.project-text {
 padding: 0.5% 2.5%;
}

.project-title:hover {
  color: #FA8072;
  cursor: pointer;
}

.show-all {
  position: absolute;
  left: 50%;
  margin-left: -50px;
  margin-top: 5%;
  margin-bottom: 5%;
}

.show-all:hover {
  cursor: pointer;
}

.contact-info {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	padding: 10px 100px 0 100px;
}

.icon {
	width: 100px;
	height: 100px;
}

.icons {
  padding: 5%;
}

.info-contact {
  text-align: center;
  font-size: 2.5vh;
}

.info-contact:hover {
  background-color:#FA8072;
  border: 2px solid #FA8072;
  background-image:linear-gradient(to right, #FA8072 0%, #F7CCAD 100%);
  background-repeat:no-repeat;
  background-size: 200% 100%; 
  transition:background-size 1s, background-color 1s;
}

.hamburger {
  border: none;
  width: 55px;
  height: 55px;
  background: white;
  cursor: pointer;
  float: right;
  right: 10px;
  top: 10px;
  z-index: 20;
  position: fixed;
  display: none;
}

.button-container {
  position: relative;
}

.play-button {
  position: absolute;
  top: 45%;
  left: 45%;
  z-index: 1;
  background: url(images/play-button.png); /* credit to smashicons on flaticon*/
  border: none;
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  cursor: pointer;
}

.skills {
  display: flex;
  flex-direction: row;
  background-color: #ffbfa8;
  justify-content: center;
  margin: 0 15% 0 15%;
}

.skills h4 {
  font-size: 1.2rem;
}

.skill-one, .skill-two {
  text-align: center;
  padding: 4% 8% 4% 8%;
}

.skill-icon {
  width: 80px;
  height: 80px;
  margin: 0 auto;
}

/* responsiveness */

/* wide screens */
@media only screen and (min-width: 1400px) {
  .contact-info {
    padding: 20px 200px 0 200px;
  }

  .icon {
    width: 150px;
    height: 150px;
  }

  .icons {
    padding: 7%;
  }
}

@media only screen and (min-width: 682px) and (max-width: 1078px) {
  .projects {
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 2%;
    margin: 15% 15% 60% 15%;
  }
}

/* small screens */

@media only screen and (max-width: 674px) {
  .projects {
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 2%;
    margin: 15% 15% 30% 15%;
  }

  .menu {
    background-color: white;
    padding: 10px;
    text-align: center;
    width: 150px;
    top: 45px;
    margin: 0;
    display: none;
  }

  .hamburger {
    display: block;
  }

  .menu-container {
    background-color: transparent;
  }

  .menu-link {
    display: block;
    background-color: white;
  }

  .menu-link:hover {
    background-color:#FA8072;
    border: 2px solid #FA8072;
    background-image:linear-gradient(to right, #FA8072 0%, #F7CCAD 100%);
    background-repeat:no-repeat;
    background-size: 200% 100%; 
    transition:background-size 1s, background-color 1s;
  }

  .show-all {
    background-color: #ffbfa8;
    padding: 8px;
    color: black;
    background-size: 0% 100%;
    border:none;
    transition: background-color .5s;
  }

  .show-all:hover {
    background-color:#FA8072;
    border: 2px solid #FA8072;
    background-image:linear-gradient(to right, #FA8072 0%, #F7CCAD 100%);
    background-repeat:no-repeat;
    background-size: 200% 100%; 
    transition:background-size 1s, background-color 1s;
  }
}

@media only screen and (max-width: 450px) {
  .central-content {
    top: 30%;
  }

  .hamburger {
    width: 45px;
    height: 45px;
  }

  .show-all-button {
    padding: 20px;
  }

  .icons .page-text {
    margin: 0 10% 0 10%;
  }

  .play-button {
    top: 43%;
    left: 43%;
  }
}
/* animations */

.animation {
  opacity: 0;
  -webkit-animation: reveal 1.3s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
     -moz-animation: reveal 1.3s ease-in 1 normal forwards;
       -o-animation: reveal 1.3s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
          animation: reveal 1.3s cubic-bezier(0, 1, 0.5, 1) 1 normal forwards;
}

.animation-one {
  -webkit-animation-delay: 0;
     -moz-animation-delay: 0;
       -o-animation-delay: 0;
          animation-delay: 0;
}

.animation-two {
  -webkit-animation-delay: 500ms;
     -moz-animation-delay: 500ms;
       -o-animation-delay: 500ms;
          animation-delay: 500ms;
}

@-webkit-keyframes reveal {
  0% {
    opacity: 0;
    -webkit-transform: translateY(100%);
       -moz-transform: translateY(100%);
         -o-transform: translateY(100%);
            transform: translateY(100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
         -o-transform: translateY(0);
            transform: translateY(0);
  }
}

@-moz-keyframes reveal {
  0% {
    opacity: 0;
    -webkit-transform: translateY(100%);
       -moz-transform: translateY(100%);
         -o-transform: translateY(100%);
            transform: translateY(100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
         -o-transform: translateY(0);
            transform: translateY(0);
  }
}

@-o-keyframes reveal {
  0% {
    opacity: 0;
    -webkit-transform: translateY(100%);
       -moz-transform: translateY(100%);
         -o-transform: translateY(100%);
            transform: translateY(100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
         -o-transform: translateY(0);
            transform: translateY(0);
  }
}

@keyframes reveal {
  0% {
    opacity: 0;
    -webkit-transform: translateY(100%);
       -moz-transform: translateY(100%);
         -o-transform: translateY(100%);
            transform: translateY(100%);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
       -moz-transform: translateY(0);
         -o-transform: translateY(0);
            transform: translateY(0);
  }
}

/*
colors
#ff5750
#C96862
#74413E
#ffbfa8
#FA8072

*/

